tests/ui/coroutine/yield-in-args.stderr
error[E0626]: borrow may still be in use when coroutine yields
  --> $DIR/yield-in-args.rs:9:13
   |
LL |     || {
   |     -- within this coroutine
LL |         let b = true;
LL |         foo(&b, yield);
   |             ^^  ----- possible yield occurs here
   |
help: add `static` to mark this coroutine as unmovable
   |
LL |     static || {
   |     ++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0626`.
